# tyousa

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  大阪市_20点位_模拟数据_评分表.xlsx
example/: candidates_example.csv  run_example.sh
src/tyousa/: __init__.py  cache.py  cli.py  excel.py  models.py  sample_data.py  utils.py
src/tyousa/providers/: __init__.py  geocode.py  google_poi.py  jstat_api.py  richreport.py  stats.py
templates/: README.md
tests/: test_excel_writer.py  test_richreport_provider.py  test_utils.py
