[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tyousa"
version = "0.1.0"
description = "Coin laundry site scoring automation for Osaka candidates"
authors = [{name = "OpenAI Codex", email = "codex@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "requests>=2.32",
    "openpyxl>=3.1",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "ruff>=0.5.7",
    "black>=24.4",
]

[project.scripts]
tyousa = "tyousa.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM", "ERA", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]
